<resources>
    <string name="app_name">PedraPapelTesoura</string>
    <string name="quantos_participantes">Quantos Participantes?</string>
    <string name="_2_jogadores">2 jogadores</string>
    <string name="_3_jogadores">3 jogadores</string>
    <string name="selecione_sua_jogada">Selecione sua jogada: </string>
    <string name="jogada_do_computador_1">Jogada do computador 1: </string>
    <string name="jogada_do_computador_2">Jogada do computador 2: </string>
    <string name="resultado">Resultado: </string>
</resources>